--- a/Homework-Template.tex
+++ b/Homework-Template.tex
@@ -54,13 +54,13 @@
 
 \title{	
 \normalfont \normalsize 
-\textsc{university, school or department name} \\ [25pt] % Your university, school and/or department name(s)
+\textsc{University of Tennessee, Department of Mathematics} \\ [25pt] % Your university, school and/or department name(s)
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
-\huge Assignment Title \\ % The assignment title
+\huge MATH 447 - Homework ? \\ % The assignment title
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
-\author{John Smith} % Your name
+\author{Robert D. French} % Your name
 
 \date{\normalsize\today} % Today's date or a custom date
 
