Fix typo in Problem 2

--- a/Hmk-4.tex
+++ b/Hmk-4.tex
@@ -108,7 +108,7 @@ If $x \neq \frac{1}{2}$ belongs to the left subinterval $[0,\frac{1}{2}]$ we tak
 \frac{a_1}{2} \leq x \leq \frac{a_1}{2} + \frac{a_2 + 1}{2^2}.
 \end{align}
 
-We continue this bisection procedure, assigning at the $n$th stage the value $a_n = 0$ if $x$ is not the bisection point and lies in the left subinterval, and assinging the value $a_n = 1$ if $x$ lies in the right subinterval. Thus, we have a well-defined sequence $(a_n)$ of 0s and 1s such that Eqn 2.1 above holds.\\
+We continue this bisection procedure, assigning at the $n$th stage the value $a_n = 0$ if $x$ is not the bisection point and lies in the left subinterval, and assigning the value $a_n = 1$ if $x$ lies in the right subinterval. Thus, we have a well-defined sequence $(a_n)$ of 0s and 1s such that Eqn 2.1 above holds.\\
 
 Now we proceed to show that the upper and lower bounds given in Eqn 2.1 form a sequence of nested intervals. Let $L_n$ be the $n$th lower bound and $U_n$ the $n$th upper bound so that
 
