Add Problem 3 statements

--- a/Hmk-4.tex
+++ b/Hmk-4.tex
@@ -132,5 +132,21 @@ L_{n-1} \leq L_n < U_n \leq U_{n-1}
 
 so that the interval $[L_{n-1},U_{n-1}]$ contains the interval $[L_n,U_n]$.$\blacksquare$\\
 
+%----------------------------------------------------------------------------------------
+%	PROBLEM 3
+%----------------------------------------------------------------------------------------
 
+\section{Some problems concerning Intervals}
+
+\subsection*{Exercise 2.5.3}
+
+If $S \subseteq \mathbb{R}$ is a nonempty bounded set, and $I_S := [\inf S, \sup S]$, then $S \subseteq I_S$. Moreover, if $J$ is any closed bounded interval containing $S$, then $I_S \subseteq J$.\\
+
+\paragraph{Proof.} A good argument. $\blacksquare$\\
+
+\subsection*{Exercise 2.5.10}
+
+In the context of the proofs of Theorems 2.5.2 and 2.5.3, we have $\eta \in \cap_{n=1}^{\infty} I_n$. Also, $[\xi, \eta] = \cap_{n=1}^{\infty} I_n$.\\
+
+\paragraph{Proof.} A good argument. $\blacksquare$\\
 \end{document}
