--- a/Hmk-4.tex
+++ b/Hmk-4.tex
@@ -54,7 +54,7 @@
 
 \title{	
 \normalfont \normalsize 
-\textsc{University of Tennessee, Department of Mathematics} \\ [25pt] % Your university, school and/or department name(s)
+\textsc{University of Tennessee \\ Department of Mathematics} \\ [25pt] % Your university, school and/or department name(s)
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
 \huge MATH 447 - Homework 4 \\ % The assignment title
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
