--- a/Hmk-4.tex
+++ b/Hmk-4.tex
@@ -194,4 +194,27 @@ a_n \leq \xi \leq x \leq \eta \leq b_n \fanin
 \end{equation}
 
 so that $x \in \xieta$. $\blacksquare$\\
+
+\section{Some problems concerning Sequences and Their Limits}
+
+\subsection*{Exercise 3.1.4}
+
+For any $b \in \mathbb{R}$, $\lim(b/n) = 0$. 
+
+\paragraph{Proof.} Consider first that, $\fanin$, $|b/n| \leq |b/n|$, and since $n > 0$, we can even say that $|b/n - 0| \leq |b| \cdot 1/n$. We can leverage the fact that $\lim(1/n)=0$ together with Theorem 3.1.10 (by taking $C=|b|$ and $m=1$) to conclude that $\lim(b/n)=0$ for any $b \in \mathbb{R}$. $\blacksquare$\\
+
+\subsection*{Exercise 3.1.5}
+\subsubsection*{Part a}
+\paragraph{Proof.} Argument. $\blacksquare$\\
+\subsubsection*{Part d}
+\paragraph{Proof.} Argument. $\blacksquare$\\
+
+\subsection*{Exercise 3.1.6}
+\subsubsection*{Part c}
+\paragraph{Proof.} Argument. $\blacksquare$\\
+\subsubsection*{Part d}
+\paragraph{Proof.} Argument. $\blacksquare$\\
+
+\subsection*{Exercise 3.1.8}
+\paragraph{Proof.} Argument. $\blacksquare$\\
 \end{document}
