--- a/Hmk-4.tex
+++ b/Hmk-4.tex
@@ -227,14 +227,14 @@ Since $\kep \in \mathbb{N}$ by definition, we know it is nonzero, so we may empl
 \frac{\kep}{(\kep)^2 + 1} < \epsilon \\
 \end{gather*}
 
-We are guaranteed that $\frac{n}{n^2 + 1}$ is positive, so 
+We are guaranteed that $\frac{\kep}{\kep ^2 + 1}$ is positive, so 
 
 \begin{gather*}
 \frac{\kep}{(\kep)^2 + 1} < \epsilon \\
 \left|\frac{\kep}{(\kep)^2 + 1} - 0\right| < \epsilon \\
 \end{gather*}
 
-so that $\lim(\frac{n}{n^2 + 1}) = 0$. $\blacksquare$\\
+Lastly, since $n/(n^2 + 1) < \kep/(\kep ^2 + 1)$ when $n \geq \kep$, we have that $\lim(\frac{n}{n^2 + 1}) = 0$. $\blacksquare$\\
 \subsubsection*{Part d}
 \paragraph{Proof.} Argument. $\blacksquare$\\
 
