--- a/Hmk-5.tex
+++ b/Hmk-5.tex
@@ -68,19 +68,22 @@
 
 \maketitle % Print the title
 
-%----------------------------------------------------------------------------------------
-%	PROBLEM 1
-%----------------------------------------------------------------------------------------
 
 \section*{Section 3.1}
 
-\paragraph{Problem 10.} Prove that if $\lim(x_n) = 0$ and if $x > 0$, then there exists a natural number $M$ such that $x_n > 0$ for all $n \geq M$.
+\newcommand{\prob}[1]{\subsection*{Problem {#1}}}
+\newcommand{\subprob}[1]{\subsubsection*{{#1}}}
+\newcommand{\pf}{\paragraph{Proof.}}
 
-\paragraph{Proof.} By the definition of limit, for each positive $\epsilon$ such an $M(\epsilon)$ can be found. Thus, take $\epsilon$ to be smaller than $x$, so that $x_n \in V_\epsilon (x) = (x - \epsilon, x + \epsilon)$ whenever $n \geq M$. Since $\epsilon < x$, $x - \epsilon \in \mathbb{P}$ so $x_n > 0$. $\blacksquare$
+%%%%% Problem 3.1.10
+\prob{10} Prove that if $\lim(x_n) = 0$ and if $x > 0$, then there exists a natural number $M$ such that $x_n > 0$ for all $n \geq M$.
 
-\paragraph{Problem 14.} Let $b \in \mathbb{R}$ satisfy $0 < b < 1$. Show that $\lim(nb^n) = 0$.
+\pf By the definition of limit, for each positive $\epsilon$ such an $M(\epsilon)$ can be found. Thus, take $\epsilon$ to be smaller than $x$, so that $x_n \in V_\epsilon (x) = (x - \epsilon, x + \epsilon)$ whenever $n \geq M$. Since $\epsilon < x$, $x - \epsilon \in \mathbb{P}$ so $x_n > 0$. $\blacksquare$
 
-\paragraph{Proof.} We first begin by proving the following Lemma: If $(k_n)^2 \rightarrow 0$ and $k_n < 0$, then $k_n \rightarrow 0$.\\
+%%%%% Problem 3.1.14
+\prob{14} Let $b \in \mathbb{R}$ satisfy $0 < b < 1$. Show that $\lim(nb^n) = 0$.
+
+\pf We first begin by proving the following Lemma: If $(k_n)^2 \rightarrow 0$ and $k_n < 0$, then $k_n \rightarrow 0$.\\
 
 By hypothesis, given an $\epsilon > 0$, there exists some $M(\epsilon) \in \mathbb{N}$ such that  $|(k_n)^2 - 0| < \epsilon$ whenever $n \geq M(\epsilon)$. Further, $|(k_n)^2 - 0|$ = $\left| \left| k_n \right| \cdot \left| k_n \right| \right|$ = $|k_n|^2$ so that we have $|k_n| < \sqrt{\epsilon}$. Since the absolute value of $k_n$ is smaller than any arbitrary positive number, and we know that $k_n$ < 0 for all choices of $n$, we have that $k_n \rightarrow 0$.\\
 
@@ -89,5 +92,19 @@ Now we may proceed with the main portion of our argument. Since $b \in (0,1)$, w
 The Binomial Theorem tells us that $b = 1 + n k_n + \frac{1}{2} n (n-1) (k_n)^2 + \cdots \geq 1 + \frac{1}{2} n (n-1) (k_n)^2$, so we have that $b - 1 \geq \frac{1}{2} n (n-1) (k_n)^2$. Thus, $\frac{2b - 2}{n(n-1)} \geq (k_n)^2$.\\
 
 We know from previous work that $\frac{1}{n(n-1)} \rightarrow 0$, and since $\frac{2b - 2}{n(n-1)}$ is a constant times a convergent expression, we know that its limit is zero as well. Since $(k_n)^2$ is bounded above by a sequence which converges to zero, and below by the constant sequence $(0)$, we have that $(k_n)^2 \rightarrow 0$. Thus, by our earlier Lemma, $k_n$	
+
+%%%%% Problem 3.1.17
+\prob{17}
+\subprob{Hint} If $n \geq 3$, then $0 < 2^n/n! \leq 2(\frac{2}{3})^{n-2}$.
+
+\pf
+
+\subprob{Main Problem} Show that $\lim(2^n/n!) = 0$.
+
+\pf
+
+%%%%% Problem 3.1.18
+\prob{18} If $\lim(x_n) = x > 0$, show that there exists a natural number $K$ such that if $n \geq K$, then $\frac{1}{2}x < x_n < 2x$.
+\pf
 
 \end{document}
