Section 3.2 Problem statements

--- a/Hmk-5.tex
+++ b/Hmk-5.tex
@@ -107,4 +107,48 @@ We know from previous work that $\frac{1}{n(n-1)} \rightarrow 0$, and since $\fr
 \prob{18} If $\lim(x_n) = x > 0$, show that there exists a natural number $K$ such that if $n \geq K$, then $\frac{1}{2}x < x_n < 2x$.
 \pf
 
+\section*{Section 3.2}
+%%%%% Problem 3.2.7
+\prob{7} If $(b_n)$ is a bounded sequence and $\lim(a_n) = 0$, show that $\lim(a_n b_n) = 0$. Explain why Thm 3.2.3 cannot be used.
+\pf
+
+%%%%% Problem 3.2.9
+\prob{9} Let $y_n := \sqrt{n+1} - \sqrt{n}$ for $n \in \mathbb{N}$. Show that $(\sqrt{n} y_n)$ converges. Find the limit.
+\pf
+
+%%%%% Problem 3.2.11
+\prob{11}
+\subprob{Part A} Find $\lim\left((3\sqrt{n})^{1/2n}\right)$
+\pf
+\subprob{Part B} Find $(\sqrt{n^2 + 5n} - n)$
+\pf
+
+%%%%% Problem 3.2.12
+\newcommand{\anp}{a^{n+1}}
+\newcommand{\bnp}{b^{n+1}}
+\prob{12} If $0 < a < b$, determine $\left(\frac{\anp + \bnp}{a^n + b^n}\right)$.
+\pf
+
+%%%%% Problem 3.2.13
+\prob{13} If $a > 0$, $b > 0$, show that $\lim\left(\sqrt{(n+a)(n+b)} - n\right) = (a + b)/2$.
+\pf
+
+%%%%% Problem 3.2.14
+\prob{14}
+\subprob{Part A} Use the Squeeze Theorem to find $\lim(n^{1/n^2})$.
+\pf
+\subprob{Part B} Use the Squeeze Theorem to find $\lim((n!)^{1/n^2})$.
+\pf
+
+%%%%% Problem 3.2.15
+\prob{15} Show that if $z_n := (a^n + b^n)^{1/n}$ where $0 < a < b$, then $\lim(z_n) = b$.
+\pf
+
+%%%%% Problem 3.2.23
+\prob{23} Show that if $(x_n)$ and $(y_n)$ are convergent sequences, then the sequences $(u_n)$ and $(v_n)$ defined by $u_n := \max\{x_n, y_n\}$ and $v_n := \min\{x_n, y_n\}$ are also convergent.
+\pf
+
+%%%%% Problem 3.2.24
+\prob{24} Show that if $(x_n)$, $(y_n)$, $(z_n)$ are convergent sequences, then the sequence $(w_n)$ defined by $w_n := \text{mid}\{x_n, y_n, z_n\}$ is also convergent.
+\pf
 \end{document}
