--- a/Hmk-5.tex
+++ b/Hmk-5.tex
@@ -74,11 +74,12 @@
 \newcommand{\prob}[1]{\subsection*{Problem {#1}}}
 \newcommand{\subprob}[1]{\subsubsection*{{#1}}}
 \newcommand{\pf}{\paragraph{Proof.}}
+\newcommand{\done}{$\blacksquare$}
 
 %%%%% Problem 3.1.10
 \prob{10} Prove that if $\lim(x_n) = 0$ and if $x > 0$, then there exists a natural number $M$ such that $x_n > 0$ for all $n \geq M$.
 
-\pf By the definition of limit, for each positive $\epsilon$ such an $M(\epsilon)$ can be found. Thus, take $\epsilon$ to be smaller than $x$, so that $x_n \in V_\epsilon (x) = (x - \epsilon, x + \epsilon)$ whenever $n \geq M$. Since $\epsilon < x$, $x - \epsilon \in \mathbb{P}$ so $x_n > 0$. $\blacksquare$
+\pf By the definition of limit, for each positive $\epsilon$ such an $M(\epsilon)$ can be found. Thus, take $\epsilon$ to be smaller than $x$, so that $x_n \in V_\epsilon (x) = (x - \epsilon, x + \epsilon)$ whenever $n \geq M$. Since $\epsilon < x$, $x - \epsilon \in \mathbb{P}$ so $x_n > 0$.\done
 
 %%%%% Problem 3.1.14
 \prob{14} Let $b \in \mathbb{R}$ satisfy $0 < b < 1$. Show that $\lim(nb^n) = 0$.
@@ -91,7 +92,7 @@ Now we may proceed with the main portion of our argument. Since $b \in (0,1)$, w
 
 The Binomial Theorem tells us that $b = 1 + n k_n + \frac{1}{2} n (n-1) (k_n)^2 + \cdots \geq 1 + \frac{1}{2} n (n-1) (k_n)^2$, so we have that $b - 1 \geq \frac{1}{2} n (n-1) (k_n)^2$. Thus, $\frac{2b - 2}{n(n-1)} \geq (k_n)^2$.\\
 
-We know from previous work that $\frac{1}{n(n-1)} \rightarrow 0$, and since $\frac{2b - 2}{n(n-1)}$ is a constant times a convergent expression, we know that its limit is zero as well. Since $(k_n)^2$ is bounded above by a sequence which converges to zero, and below by the constant sequence $(0)$, we have that $(k_n)^2 \rightarrow 0$. Thus, by our earlier Lemma, $k_n$	
+We know from previous work that $\frac{1}{n(n-1)} \rightarrow 0$, and since $\frac{2b - 2}{n(n-1)}$ is a constant times a convergent expression, we know that its limit is zero as well. Since $(k_n)^2$ is bounded above by a sequence which converges to zero, and below by the constant sequence $(0)$, we have that $(k_n)^2 \rightarrow 0$. Thus, by our earlier Lemma, $k_n$ converges to 0. \done
 
 %%%%% Problem 3.1.17
 \prob{17}
