--- a/Hmk-5.tex
+++ b/Hmk-5.tex
@@ -81,21 +81,40 @@
 
 \pf By the definition of limit, for each positive $\epsilon$ such an $M(\epsilon)$ can be found. Thus, take $\epsilon$ to be smaller than $x$, so that $x_n \in V_\epsilon (x) = (x - \epsilon, x + \epsilon)$ whenever $n \geq M$. Since $\epsilon < x$, $x - \epsilon \in \mathbb{P}$ so $x_n > 0$.\done
 
-\necommand{\nin}{n \in \mathbb{N}}
+\newcommand{\nin}{n \in \mathbb{N}}
 \newcommand{\fanin}{\forall n \in \mathbb{N}}
 %%%%% Problem 3.1.14
 \prob{14} Let $b \in \mathbb{R}$ satisfy $0 < b < 1$. Show that $\lim(nb^n) = 0$.
 
-\pf We know that $n^{1/n} > 1$ $\fanin$. This implies that $n^{1/n} = 1 + k_n$ for some $k_n > 0$, so that we have $bn^{1/n} = b + b k_n$.Thus, $nb^n = (b + b k_n)^n$.\\
+\pf We know that $n^{1/n} > 1$ $\fanin$. This implies that $n^{1/n} = 1 + k_n$ for some $k_n > 0$, so that we have $bn^{1/n} = b + b k_n$. Thus, $nb^n = (b + b k_n)^n$.\\
 
-By the Binomial Theorem we know that $(b + b k_n)^n = b^n + n b^{n-1} b k_n + \frac{1}{2} n (n - 1) b^{n - 2} b^2 {k_n}^2 + \cdots$\done
+By the Binomial Theorem we know that 
+
+\begin{equation*}
+nb^n = (b + b k_n)^n = b^n + n b^{n-1} b k_n + \frac{1}{2} n (n - 1) b^{n - 2} b^2 {k_n}^2 + \cdots
+\end{equation*}
+
+which tells us that $nb^n \geq b^n + \frac{1}{2} n (n-1) b^n {k_n}^2$. Factoring out $b^n$ and subtracting 1 yields
+
+\begin{equation*}
+(n - 1) \geq \frac{1}{2} n (n - 1) {k_n}^2
+\end{equation*}
+
+so that we have $\frac{2}{n} \geq {k_n}^2$.
 
 %%%%% Problem 3.1.17
 \prob{17}
 \subprob{Hint} If $n \geq 3$, then $0 < 2^n/n! \leq 2(\frac{2}{3})^{n-2}$.
 
-\pf
+\pf Let $n = 3$, then $\frac{2^3}{3!} = \frac{8}{6} \leq 2(\frac{2}{3}) = \frac{4}{3} = \frac{8}{6}$. Thus, we have established a basis for induction.\\
 
+Now assume that $0 < \frac{2^{n-1}}{(n-1)!} \leq 2\left(\frac{2}{3}\right)^{n-3}$. Multiplying by $2$ yields $ 0 < \frac{2^n}{(n-1)!} \leq 2\left(\frac{2^{n-2}}{3^{n-3}}\right)$. Since $n \geq 3$, we have $0 < \frac{1}{n} \leq \frac{1}{3}$ so that
+
+\begin{equation*}
+0 < \frac{2^n}{(n-1)!} \cdot \frac{1}{n} = \frac{2^n}{n!} \leq 2 \cdot \left(\frac{2^{n-2}}{3^{n-3}}\right) \cdot \frac{1}{3} = 2 \left( \frac{2}{3} \right)^{n-2} 
+\end{equation*}
+
+whence $0 < \frac{2^n}{n!} \leq 2\left(\frac{2}{3}\right)^{n-2}$. Therefore the hypothesis holds by the Principal of Mathematical Inducation. \done
 \subprob{Main Problem} Show that $\lim(2^n/n!) = 0$.
 
 \pf
