--- a/Hmk-5.tex
+++ b/Hmk-5.tex
@@ -115,9 +115,12 @@ Now assume that $0 < \frac{2^{n-1}}{(n-1)!} \leq 2\left(\frac{2}{3}\right)^{n-3}
 \end{equation*}
 
 whence $0 < \frac{2^n}{n!} \leq 2\left(\frac{2}{3}\right)^{n-2}$. Therefore the hypothesis holds by the Principal of Mathematical Inducation. \done
+
 \subprob{Main Problem} Show that $\lim(2^n/n!) = 0$.
 
-\pf
+\pf We know that $0 < \frac{2^n}{n!} \leq 2\left(\frac{2}{3}\right)^{n-2}$ when $n \geq 3$, so if we can show that $2\left(\frac{2}{3}\right)^{n-2} \rightarrow 0$, then $\frac{2^n}{n!} \rightarrow 0$ by the Squeeze Theorem.\\
+
+Take $b = 2/3$ and $n = m - 2$, then by Exercise 3.1.14 we know $nb^n \rightarrow 0$. Since $2 \leq m - 2$ $\forall m > 3$, we have that $0 < 2(\frac{2}{3})^{m-2} \leq (m-2)b^{m-2}$ so that $2\left(\frac{2}{3}\right)^{m-2} \rightarrow 0$. Thus, by the Squeeze Theorem, $2^n / n! \rightarrow 0$. \done
 
 %%%%% Problem 3.1.18
 \prob{18} If $\lim(x_n) = x > 0$, show that there exists a natural number $K$ such that if $n \geq K$, then $\frac{1}{2}x < x_n < 2x$.
